objects/EXPRN__Experian_Alert_Task__c.object
<CustomObject>
    <description>Stores Task records for Business created from Experian Alerts page.</description>
    <fields>
        <fullName>EXPRN__Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Experian Alert Tasks</relationshipLabel>
        <relationshipName>Experian_Alert_Tasks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>EXPRN__Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Experian_Alert_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EXPRN__Category__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Details__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Details</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EXPRN__Due_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EXPRN__Percent_Complete__c</fullName>
        <label>Percent Complete</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0%</fullName>
                    <default>true</default>
                    <label>0%</label>
                </value>
                <value>
                    <fullName>25%</fullName>
                </value>
                <value>
                    <fullName>50%</fullName>
                </value>
                <value>
                    <fullName>75%</fullName>
                </value>
                <value>
                    <fullName>100%</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EXPRN__Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Normal</fullName>
                    <default>true</default>
                    <label>Normal</label>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EXPRN__Sharing__c</fullName>
        <inlineHelpText>Private : No other user can view this task
Public : All users can view this task</inlineHelpText>
        <label>Sharing</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Private</fullName>
                </value>
                <value>
                    <fullName>Public</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EXPRN__Start_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EXPRN__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Waiting on someone else</fullName>
                </value>
                <value>
                    <fullName>Deferred</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Experian Alert Task</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Experian Alert Tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>